--- a/login.html
+++ b/login.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polo Store</title>
-    <link rel="icon" type="image/x-icon" href="/assest/images/logo/logo-polostore-3-1080x782.png">
+    <link rel="icon" type="image/x-icon" href="/assets/images/logo/logo-polostore-3-1080x782.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assest/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick-theme.css" />
@@ -19,10 +19,11 @@
     <!-- Begin header -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
             <div class="container-fluid">
                 <a class="navbar-brand col-2" href="./index.html">
                     <div class="px-4">
-                        <img src="./assest/images/logo/logo-polostore-3-1080x782.png" class="w-50" alt="">
+                        <img src="./assets/images/logo/logo-polostore-3-1080x782.png" class="w-50" alt="">
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -60,20 +61,21 @@
                                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                                 </svg>
                             </a>
-                            <div class="d-flex justify-content-center align-items-center px-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                                    class="custom-icon bi bi-heart" viewBox="0 0 16 16">
-                                    <path
-                                        d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                                </svg>
-                            </div>
-                            <div class="d-flex justify-content-center align-items-center px-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                                    class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
-                                    <path
-                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                                </svg>
-                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center px-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                                class="custom-icon bi bi-heart" viewBox="0 0 16 16">
+                                <path
+                                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                            </svg>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center px-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                                class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                            </svg>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -161,10 +163,68 @@
 
     <!-- Begin footer -->
     <footer>
-
+        <div class="container-fluid bg-secondary text-light row p-5">
+            <div class="col-xl-3">
+                <h4 class="">POLO STORE</h4>
+                <div class="is-divider small"></div>
+                <p>Được thành lập vào đầu năm 2021, với định hướng trở thành thương hiệu thời trang nam cao cấp qua
+                    nhiều thiết kế áo polo thanh lịch và nhã nhặn, đơn giản mà tinh tế. POLO STORE đã và đang mang đến
+                    khách hàng những cảm xúc mới trong từng thiết kế hiện đại.</p>
+                <h5>HOTLINE : 0908 215 990</h3>
+            </div>
+            <div class="col-xl-3">
+                <h4 class="">SẢN PHẨM</h4>
+                <div class="is-divider small"></div>
+                <ul class="list-unstyled">
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Áo thun nam</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Áo polo nam</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Quần short kaki nam</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Quần short thun nam</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Đồ lót nam</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Đồ thể thao nam</a></li>
+                    <li class="p-2"><a href="" class="text-decoration-none text-light">Set đồ bộ nam</a></li>
+                </ul>
+            </div>
+            <div class="col-xl-3">
+                <h4 class="">CHÍNH SÁCH KHÁCH HÀNG</h4>
+                <div class="is-divider small"></div>
+                <ul class="list-unstyled">
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Giới thiệu về PoloStore</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Hướng dẫn đặt hàng</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Chính sách giao nhận</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Chính sách đổi hàng</a></li>
+                    <li class="p-2"><a href="" class="text-decoration-none text-light">Chính sách bảo mật</a></li>
+                </ul>
+            </div>
+            <div class="col-xl-3">
+                <h4 class="">TAGS</h4>
+                <div class="is-divider small"></div>
+                <ul class="list-unstyled">
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Giới thiệu về PoloStore</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Hướng dẫn đặt hàng</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Chính sách giao nhận</a></li>
+                    <li class="border-1 border-bottom border-opacity-10 p-2"><a href=""
+                            class="text-decoration-none text-light">Chính sách đổi hàng</a></li>
+                    <li class="p-2"><a href="" class="text-decoration-none text-light">Chính sách bảo mật</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
     <!-- End footer -->
-    <script src="./assest/form.js"></script>
+    <script src="./assets/form.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="./slick-1.8.1/slick/slick.min.js"></script>
