--- a/cart.html
+++ b/cart.html
@@ -282,22 +282,28 @@
     <section id="main_content">
         <div class="container">
             <div class="text-center">
-                <h3>GIỎ HÀNG > THANH TOÁN > HOÀN THÀNH</h3>
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">GIỎ HÀNG</a></li>
+                        <li class="breadcrumb-item"><a href="#">THANH TOÁN</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">HOÀN THÀNH</li>
+                    </ol>
+                </nav>
             </div>
             <div class="row">
                 <div class="cart-left col-md-7 px-4">
                     <table class="table">
                         <thead>
                             <tr>
-                                <th scope="col">Sản phẩm</th>
-                                <th scope="col">Giá</th>
-                                <th scope="col">Số lượng</th>
-                                <th scope="col">Tạm tính</th>
+                                <th scope="col" class="text-color text-uppercase">Sản phẩm</th>
+                                <th scope="col" class="text-color text-uppercase">Giá</th>
+                                <th scope="col" class="text-color text-uppercase">Số lượng</th>
+                                <th scope="col" class="text-color text-uppercase">Tạm tính</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr class="">
-                                <td>
+                                <td class="col-4">
                                     <div class="d-flex">
                                         <div class=" col-6 p-2 me-1">
                                             <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
@@ -306,43 +312,44 @@
                                         <div class="col-6 d-flex flex-column justify-content-center">
                                             <p class="fw-light d-inline mb-1">Áo Polo nam Pack P</p>
                                             <p class="text-color mb-1 text-cart"><b>Màu sắc: </b>Xanh đen</p>
-                                            <p class="text-color mb-1 text-cart"><b>Size: </b>XXL</p> 
+                                            <p class="text-color mb-1 text-cart"><b>Size: </b>XXL</p>
                                         </div>
                                     </div>
                                 </td>
-                                <td class="fw-bold">190.000 đ</td>
-                                <td>
-                                    <div class="input-group mb-3" style="width: 170px;">
-                                        <button class="btn btn-white border border-secondary" type="button" id="button-addon1"
-                                          data-mdb-ripple-color="dark">
-                                          <i class="fas fa-minus"></i>
+                                <td class="fw-bold align-middle"><span class="product-price">190.000</span> đ</td>
+                                <td class="align-middle">
+                                    <div class="input-group" style="width: 120px;">
+                                        <button class="btn btn-white border border-secondary" type="button"
+                                            id="button-addon1" data-mdb-ripple-color="dark"
+                                            onclick="decreaseQuantity()">
+                                            <i class="fas fa-minus"></i>
                                         </button>
-                                        <input type="text" id="quantity_product" class="form-control text-center border border-secondary"
-                                          value="1" aria-label="Example text with button addon" />
-                                        <button class="btn btn-white border border-secondary" type="button" id="button-addon2"
-                                          data-mdb-ripple-color="dark">
-                                          <i class="fas fa-plus"></i>
+                                        <input id="quantity_product"
+                                            class="quantity_product form-control text-center border border-secondary"
+                                            value="1" oninput="calcTotal()" />
+                                        <button class="btn btn-white border border-secondary" type="button"
+                                            id="button-addon2" data-mdb-ripple-color="dark"
+                                            onclick="increaseQuantity()">
+                                            <i class="fas fa-plus"></i>
                                         </button>
-                                      </div>
+                                    </div>
                                 </td>
-                                <td class="fw-bold">2.000.000 đ</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td colspan="2">Larry the Bird</td>
-                                <td>@twitter</td>
+                                <td class="fw-bold align-middle"><span class="tamtinh">190.000</span> đ</td>
+
                             </tr>
                         </tbody>
                     </table>
+                    <a href="">
+                        <button type="button" class="btn btn-light border border-1 fw-bold"><svg
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-arrow-left fw-bold" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
+                            </svg> TIẾP TỤC XEM SẢN PHẨM</button>
+                    </a>
                 </div>
                 <div class="cart-right col-md-5 px-4 border-start">
-                    <p class="fw-bold border-bottom p-2">CỘNG GIỎ HÀNG</p>
+                    <p class="fw-bold border-bottom p-2 text-color">CỘNG GIỎ HÀNG</p>
                     <div class="my-3">
                         <div class="d-flex justify-content-between border-bottom">
                             <p>Tạm tính</p>
@@ -356,13 +363,16 @@
 
                     <div class="border border-end-0 border-start-0 border-4 py-4">
                         <button type="button" class="btn btn-danger w-100">Tiến hành thanh toán</button>
-                        <p>Mã ưu đãi <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tag-fill" viewBox="0 0 16 16">
-                            <path d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
-                          </svg></p>
+                        <p>Mã ưu đãi <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-tag-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0" />
+                            </svg></p>
                     </div>
 
                     <div class="mt-3">
-                        <input class="w-100 border border-2 p-2 my-3 shadow" type="text" placeholder="Mã ưu đãi" name="" id="">
+                        <input class="w-100 border border-2 p-2 my-3 shadow" type="text" placeholder="Mã ưu đãi" name=""
+                            id="">
                         <button type="button" class="btn btn-secondary w-100">Áp dụng</button>
                     </div>
                 </div>
