feat: thêm một số chức năng giỏ hàng

--- a/cart.html
+++ b/cart.html
@@ -301,11 +301,12 @@
                                 <th scope="col" class="text-color text-uppercase">Tạm tính</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody class="table-cart-content">
                             <tr class="">
-                                <td class="col-4">
-                                    <div class="d-flex">
-                                        <div class=" col-6 p-2 me-1">
+                                <td class="col-5">
+                                    <div class="d-flex align-items-center">
+                                        <button type="button" class="btn-close border border-1 px-3 py-2" aria-label="Close"></button>
+                                        <div class="col-4 p-2 me-1">
                                             <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
                                                 class="w-100" alt="">
                                         </div>
@@ -444,6 +445,7 @@
         </div>
     </footer>
     <!-- End footer -->
+     <script src="./assets/js/product_detail.js"></script>
     <script src="./assets/js/cart.js"></script>
     <script src="./assets/js/app.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
