--- a/product_detail.html
+++ b/product_detail.html
@@ -224,7 +224,7 @@
                               d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                       </svg>
                   </div>
-                  <div class="cart-item position-relative justify-content-center align-items-center px-3">
+                  <div class="cart-item position-relative justify-content-center align-items-center px-3 py-1">
                       <a href="./cart.html">
                           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                               class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
@@ -241,6 +241,21 @@
                           class="menudrop-ticket position-absolute bg-body-tertiary rounded-3 shadow-lg border border-2 border-dark-subtle p-4">
                           <div class="cart-list">
                               <div class="d-flex border-bottom">
+                                  <div class=" col-5 p-2">
+                                      <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
+                                          class="w-75" alt="">
+                                  </div>
+                                  <div class="col-5" style="font-size: .9rem;">
+                                      <p class="fw-light mb-1 fs-5">Áo Polo nam Pack P</p>
+                                      <p class="text-color mb-1"><b>Màu sắc: </b>Xanh đen</p>
+                                      <p class="text-color mb-1"><b>Size: </b>XXL</p>
+                                      <p class="text-color mb-1">1 x <b>170.000đ</b></p>
+                                  </div>
+                                  <div class="">
+                                    <button type="button" class="btn-close border border-1 p-2" aria-label="Close"></button>
+                                  </div>
+                              </div>
+                              <!-- <div class="d-flex border-bottom">
                                   <div class=" col-6 p-2">
                                       <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
                                           class="w-75" alt="">
@@ -251,19 +266,7 @@
                                       <p class="text-color mb-1"><b>Size: </b>XXL</p>
                                       <p class="text-color mb-1">1 x <b>170.000đ</b></p>
                                   </div>
-                              </div>
-                              <div class="d-flex border-bottom">
-                                  <div class=" col-6 p-2">
-                                      <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
-                                          class="w-75" alt="">
-                                  </div>
-                                  <div class="col-6">
-                                      <p class="fw-light mb-1 fs-5">Áo Polo nam Pack P</p>
-                                      <p class="text-color mb-1"><b>Màu sắc: </b>Xanh đen</p>
-                                      <p class="text-color mb-1"><b>Size: </b>XXL</p>
-                                      <p class="text-color mb-1">1 x <b>170.000đ</b></p>
-                                  </div>
-                              </div>
+                              </div> -->
                           </div>
                           <div class="d-flex justify-content-between mt-3 border-bottom">
                               <p class="text-color fw-bold">Tổng số phụ: </p>
@@ -271,9 +274,9 @@
                           </div>
                           <div class="d-flex flex-column align-items-center mt-3 b-0">
                               <button type="button" class="btn btn-dark w-100">
-                                  <a href="#" class="text-decoration-none text-light">XEM GIỎ HÀNG</a>
+                                  <a href="./cart.html" class="text-decoration-none text-light">XEM GIỎ HÀNG</a>
                               </button>
-                              <button type="button" class="btn btn-warning w-100 mt-2">THANH TOÁN</button>
+                              <button type="button" class="btn bg-button w-100 mt-2">THANH TOÁN</button>
                           </div>
                       </div>
                   </div>
@@ -375,7 +378,7 @@
             <div class="row d-md-flex mb-4">
               <div class="col-md-4 col-6 me-md-5">
                 <label class="mb-2">Size</label>
-                <select class="form-select border border-secondary" style="height: 35px;">
+                <select class="cart-size form-select border border-secondary" style="height: 35px;">
                   <option>L</option>
                   <option>XL</option>
                   <option>XXL</option>
