--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polo Store</title>
+    <title>Giỏ hàng - Polo Store</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/logo/logo-polostore-3-1080x782.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -272,7 +272,7 @@
                                 </div>
                                 <div class="d-flex flex-column align-items-center mt-3 b-0">
                                     <button type="button" class="btn btn-dark w-100">
-                                        <a href="#" class="text-decoration-none text-light">XEM GIỎ HÀNG</a>
+                                        <a href="./cart.html" class="text-decoration-none text-light">XEM GIỎ HÀNG</a>
                                     </button>
                                     <button type="button" class="btn btn-warning w-100 mt-2">THANH TOÁN</button>
                                 </div>
@@ -359,7 +359,7 @@
                 </div>
                 <div class="cart-right col-md-5 px-4 border-start">
                     <p class="fw-bold border-bottom p-2 text-color">CỘNG GIỎ HÀNG</p>
-                    <div class="my-3">
+                    <div class="tongtien_cart my-3">
                         <div class="d-flex justify-content-between border-bottom">
                             <p>Tạm tính</p>
                             <b>2.009.000 đ</b>
