--- a/checkout.html
+++ b/checkout.html
@@ -4,16 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giỏ hàng - Polo Store</title>
+    <title>Thanh Toán - Polo Store</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/logo/logo-polostore-3-1080x782.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="stylesheet" href="./assets/css/cart.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="./slick-1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" href="./assets/css/checkout.css">
 </head>
 
 <body>
@@ -291,7 +288,7 @@
                                 </div>
                                 <div class="d-flex justify-content-between mt-3 border-bottom">
                                     <p class="text-color fw-bold">Tổng số phụ: </p>
-                                    <p class="tongsophu fw-bold">550.000đ</p>
+                                    <p class="fw-bold">550.000đ</p>
                                 </div>
                                 <div class="d-flex flex-column align-items-center mt-3 b-0">
                                     <button type="button" class="btn btn-dark w-100">
@@ -310,106 +307,97 @@
     <!-- End header -->
 
     <!-- Begin content -->
-    <section id="main_content">
-        <div class="container">
-            <div class="text-center">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">GIỎ HÀNG</a></li>
-                        <li class="breadcrumb-item"><a href="#">THANH TOÁN</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">HOÀN THÀNH</li>
-                    </ol>
-                </nav>
-            </div>
-            <div class="row">
-                <div class="cart-left col-md-7 px-4">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col" class="text-color text-uppercase">Sản phẩm</th>
-                                <th scope="col" class="text-color text-uppercase">Giá</th>
-                                <th scope="col" class="text-color text-uppercase">Số lượng</th>
-                                <th scope="col" class="text-color text-uppercase">Tạm tính</th>
-                            </tr>
-                        </thead>
-                        <tbody class="table-cart-content">
-                            <tr class="">
-                                <td class="col-5">
-                                    <div class="d-flex align-items-center">
-                                        <button type="button" class="btn-close border border-1 px-3 py-2"
-                                            aria-label="Close"></button>
-                                        <div class="col-4 p-2 me-1">
-                                            <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
-                                                class="w-100" alt="">
-                                        </div>
-                                        <div class="col-6 d-flex flex-column justify-content-center">
-                                            <p class="fw-light d-inline mb-1">Áo Polo nam Pack P</p>
-                                            <p class="text-color mb-1 text-cart"><b>Màu sắc: </b>Xanh đen</p>
-                                            <p class="text-color mb-1 text-cart"><b>Size: </b>XXL</p>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="fw-bold align-middle"><span class="product-price">190.000</span> đ</td>
-                                <td class="align-middle">
-                                    <div class="input-group" style="width: 120px;">
-                                        <button class="btn btn-white border border-secondary" type="button"
-                                            id="button-addon1" data-mdb-ripple-color="dark"
-                                            onclick="decreaseQuantity()">
-                                            <i class="fas fa-minus"></i>
-                                        </button>
-                                        <input id="quantity_product"
-                                            class="quantity_product form-control text-center border border-secondary"
-                                            value="1" oninput="calcTotal()" />
-                                        <button class="btn btn-white border border-secondary" type="button"
-                                            id="button-addon2" data-mdb-ripple-color="dark"
-                                            onclick="increaseQuantity()">
-                                            <i class="fas fa-plus"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                                <td class="fw-bold align-middle"><span class="tamtinh">190.000</span> đ</td>
-
-                            </tr>
-                        </tbody>
-                    </table>
-                    <a href="./ao_nam.html" class="">
-                        <button type="button" class="btn btn-light border border-1 fw-bold"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-arrow-left fw-bold" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
-                            </svg> TIẾP TỤC XEM SẢN PHẨM</button>
-                    </a>
+    <section class="checkout container" style="margin-top: 6rem;">
+        <nav aria-label="breadcrumb" class="pt-4">
+          <ol class="breadcrumb breadcrumb-lg d-flex justify-content-center">
+            <li class="breadcrumb-item text-uppercase"><a href="/">Giỏ hàng</a></li>
+            <li class="breadcrumb-item text-uppercase active" aria-current="page">Chi tiết thanh toán</li>
+            <li class="breadcrumb-item text-uppercase"><a href="/gio-hang">Đơn hàng hoàn tất</a></li>
+          </ol>
+        </nav>
+        <div class="row container">
+          <div class="col-md-7 px-0 py-4 border-top border-2">
+            <form class="needs-validation" novalidate>
+              <div class="form-group">
+                <h3 class="mb-4">Thanh toán và giao hàng</h3>
+                <div class="row">
+                  <div class="col-md-6 col-sm-12 mb-3">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Tên" required>
+                  </div>
+                  <div class="col-md-6 col-sm-12 mb-3">
+                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="Số điện thoại" required>
+                  </div>
                 </div>
-                <div class="cart-right col-md-5 px-4 border-start">
-                    <p class="fw-bold border-bottom p-2 text-color">CỘNG GIỎ HÀNG</p>
-                    <div class="tongtien_cart my-3">
-                        <div class="d-flex justify-content-between border-bottom">
-                            <p>Tạm tính</p>
-                            <b>2.009.000 đ</b>
-                        </div>
-                        <div class="d-flex justify-content-between align-items-center py-2">
-                            <p class="m-0">Tổng</p>
-                            <b>2.009.000 đ</b>
-                        </div>
-                    </div>
-
-                    <div class="border border-end-0 border-start-0 border-4 py-4">
-                        <button type="button" class="btn btn-danger w-100">Tiến hành thanh toán</button>
-                        <p>Mã ưu đãi <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-tag-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0" />
-                            </svg></p>
-                    </div>
-
-                    <div class="mt-3">
-                        <input class="w-100 border border-2 p-2 my-3 shadow" type="text" placeholder="Mã ưu đãi" name=""
-                            id="">
-                        <button type="button" class="btn btn-secondary w-100">Áp dụng</button>
-                    </div>
+                <div class="row">
+                  <div class="col-md-6 col-sm-12 mb-3">
+                    <select class="form-control" id="city" name="city" required>
+                      <option value="">Tỉnh/Thành phố</option>
+                    </select>
+                  </div>
+                  <div class="col-md-6 col-sm-12 mb-3">
+                    <select class="form-control" id="district" name="district" required>
+                      <option value="">Quận/Huyện</option>
+                    </select>
+                  </div>
                 </div>
+                <div class="form-group mb-3">
+                  <select class="form-control" id="ward" name="ward" required>
+                    <option value="">Xã/Phường</option>
+                  </select>
+                </div>
+                <div class="form-group mb-3">
+                  <input type="text" class="form-control" id="address" name="address" placeholder="Địa chỉ" required>
+                </div>
+                <div class="form-group mb-3">
+                  <div class="form-check">
+                    <input class="form-check-input p-1" type="checkbox" id="create-account" name="create-account">
+                    <label class="form-check-label" for="create-account">Tạo tài khoản mới</label>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <div class="mt-4">
+              <h3 class="mb-3">Thông tin bổ sung</h3>
+              <textarea class="w-100 border p-2" rows="2" cols="5" name="" placeholder="Ghi chú về đơn hàng, ví dụ: thời gian hay chỉ dẫn địa điểm giao hàng chi tiết hơn." id=""></textarea>
             </div>
+          </div>
+          <div class="col-md-5 p-0 px-lg-4">
+            <div class="order-summary p-5 border border-black border-2">
+              <h3 class="mb-4">Đơn hàng của bạn</h3>
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>Sản phẩm</th>
+                    <th>Tạm tính</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <!-- <img src="image-url" alt="Áo polo nam Pack Trinity"> -->
+                      <span>Áo polo nam Pack Trinity</span>
+                      <span>× 3</span>
+                      <p class="mb-0">Màu sắc: Xanh đen</p>
+                      <p class="mb-0">Size: XL (75kg)</p>
+                    </td>
+                    <td>510.000 ₫</td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td>Tạm tính</td>
+                    <td>510.000 ₫</td>
+                  </tr>
+                  <tr>
+                    <td>Tổng</td>
+                    <td>510.000 ₫</td>
+                  </tr>
+                </tfoot>
+              </table>
+              <p class="mb-4">Thanh toán tiền mặt khi nhận hàng (COD)</p>
+              <button type="submit" class="btn btn-primary w-100 place-order text-uppercase fw-bold">Đặt hàng</button>
+            </div>
+          </div>
         </div>
     </section>
     <!-- End content -->
@@ -477,89 +465,13 @@
         </div>
     </footer>
     <!-- End footer -->
-    <script src="./assets/js/product_detail.js"></script>
-    <script src="./assets/js/cart.js"></script>
+
     <script src="./assets/js/app.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="./slick-1.8.1/slick/slick.min.js"></script>
-
-    <script type="text/javascript">
-        $('.your-class').slick({
-            settingName: 'settingValue'
-        });
-
-        $(document).ready(function () {
-            $('.customer-reviews').slick({
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 3000,
-            });
-        });
-        $(document).ready(function () {
-            $('.slider-category').slick({
-                slidesToShow: 4, // Hiển thị 4 ảnh cùng lúc
-                slidesToScroll: 1,
-                arrows: true,
-                responsive: [
-                    {
-                        breakpoint: 768, // Khi màn hình nhỏ hơn 768px
-                        settings: {
-                            slidesToShow: 2, // Hiển thị 2 ảnh cùng lúc
-                            slidesToScroll: 1,
-                            infinite: true,
-                            dots: true
-                        }
-                    },
-                    {
-                        breakpoint: 480, // Khi màn hình nhỏ hơn 480px
-                        settings: {
-                            slidesToShow: 1, // Hiển thị 1 ảnh
-                            slidesToScroll: 1
-                        }
-                    }
-                ]
-            });
-
-            $('.slider-product').slick({
-                slidesToShow: 4, // Hiển thị 4 ảnh cùng lúc
-                slidesToScroll: 1,
-                arrows: true,
-                responsive: [
-                    {
-                        breakpoint: 768, // Khi màn hình nhỏ hơn 768px
-                        settings: {
-                            slidesToShow: 2, // Hiển thị 2 ảnh cùng lúc
-                            slidesToScroll: 1,
-                            infinite: true,
-                        }
-                    },
-                    {
-                        breakpoint: 480, // Khi màn hình nhỏ hơn 480px
-                        settings: {
-                            slidesToShow: 1, // Hiển thị 1 ảnh
-                            slidesToScroll: 1
-                        }
-                    }
-                ]
-            });
-        });
-
-
-    </script>
-    <script type="text/javascript">
-        $('.your-class').slick({
-            prevArrow: '<button type="button" class="slick-prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/></svg></button>',
-            nextArrow: '<button type="button" class="slick-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-circle-fill" viewBox="0 0 16 16"><path d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8m5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707z"/></svg></button>',
-            // Add other settings here
-        });
-    </script>
-
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="./assets/js/checkout.js"></script>
 </body>
 
 </html>
