feat: add function in renderdata.js

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 </div>
                                 <ul class="ps-4 menudrop list-unstyled">
                                     <li class="py-2">
-                                        <a href="#" class="text-color text-decoration-none">Áo polo</a>
+                                        <a href="./ao-polo-nam.html" class="text-color text-decoration-none">Áo polo</a>
                                     </li>
                                     <li class="py-2">
                                         <a href="#" class="text-color text-decoration-none">Áo thun</a>
@@ -169,7 +169,7 @@
                             <a class="nav-link fw-semibold active dropdown-toggle" aria-current="page" href="#">ÁO
                                 NAM</a>
                             <ul class="dropdown-menu border border-2 mt-1">
-                                <li class="overflow-hidden"><a class="dropdown-item" href="./ao_nam.html">Áo polo</a>
+                                <li class="overflow-hidden"><a class="dropdown-item" href="./ao-polo-nam.html">Áo polo</a>
                                 </li>
                                 <li class="overflow-hidden"><a class="dropdown-item" href="#">Áo thun</a></li>
                                 <li class="overflow-hidden"><a class="dropdown-item" href="#">Áo thun Oversize</a></li>
