--- a/product_detail.html
+++ b/product_detail.html
@@ -75,7 +75,7 @@
                             </div>
                             <ul class="ps-4 menudrop list-unstyled">
                                 <li class="py-2">
-                                    <a href="#" class="text-color text-decoration-none">Áo polo</a>
+                                    <a href="./ao-polo-nam.html" class="text-color text-decoration-none">Áo polo</a>
                                 </li>
                                 <li class="py-2">
                                     <a href="#" class="text-color text-decoration-none">Áo thun</a>
@@ -537,7 +537,7 @@
         <div class="border-bottom border-2">
           <h3>SẢN PHẨM LIÊN QUAN</h3>
         </div>
-        <div id="aopolo-product" class="your-class row mt-4" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
+        <div id="product-related" class="your-class row mt-4" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
           <div class="col-md-3 px-3">
             <a href="./sanpham.html" class="text-decoration-none">
               <div class="card product-card shadow-sm">
@@ -648,7 +648,7 @@
           </div>
         </div>
         <div class="mt-4 d-flex justify-content-center">
-          <button class="px-3 py-2 d-flex fw-bold rounded-2">Xem tất cả <svg xmlns="http://www.w3.org/2000/svg"
+          <button class="xemtatca-btn px-3 py-2 d-flex fw-bold rounded-2">Xem tất cả <svg xmlns="http://www.w3.org/2000/svg"
               width="30" height="20" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
               <path
                 d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
