feat: add some function

--- a/checkout.html
+++ b/checkout.html
@@ -371,7 +371,7 @@
                     <th>Tạm tính</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="checkout_value">
                   <tr>
                     <td>
                       <!-- <img src="image-url" alt="Áo polo nam Pack Trinity"> -->
